[package]
name = "db-import"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = "1.0"
lmdb-zero = "0.4"
hex = "0.4"

nimiq-account = { path = "../primitives/account" }
nimiq-accounts = { path = "../accounts" }
beserial = { path = "../beserial" }
nimiq-database = { path = "../database", features = ["full-nimiq"] }
nimiq-primitives = { path = "../primitives" }
nimiq-keys = { path = "../keys" }
nimiq-block = { path = "../primitives/block" }
nimiq-blockchain = { path = "../blockchain" }
nimiq-bls = { path = "../bls" }
nimiq-collections = { path = "../collections" }
nimiq-hash = { path = "../hash" }
nimiq-vrf = { path = "../vrf" }
nimiq-genesis = { path = "../genesis" }


[dependencies.nimiq-lib]
package = "nimiq-lib"
path = "../lib"
version = "0.1"
features = [
    "validator",
    "rpc-server",
    "metrics-server",
    "deadlock",
    "logging",
    "wallet",
    "panic"
]